--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ anyio==3.6.2
 async-generator==1.10
 async-timeout==4.0.2
 attrs==22.2.0
+black==23.1.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
+click==8.1.3
 exceptiongroup==1.1.0
 frozenlist==1.3.3
+google-search-results==2.4.1
 grpcio==1.48.1
 grpcio-tools==1.48.1
 h11==0.14.0
@@ -15,10 +18,14 @@ httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
 multidict==6.0.4
+mypy-extensions==0.4.3
 nest-asyncio==1.5.6
 openai==0.26.4
 outcome==1.2.0
+packaging==23.0
+pathspec==0.11.0
 Pillow==9.4.0
+platformdirs==2.6.2
 protobuf==3.19.5
 PySocks==1.7.1
 python-dotenv==0.21.1
@@ -30,6 +37,7 @@ six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 stability-sdk==0.3.1
+tomli==2.0.1
 tqdm==4.64.1
 trio==0.22.0
 trio-websocket==0.9.2
