--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ anyio==3.6.2
 async-generator==1.10
 async-timeout==4.0.2
 attrs==22.2.0
+beautifulsoup4==4.11.2
 black==23.1.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+colorama==0.4.6
 exceptiongroup==1.1.0
 frozenlist==1.3.3
 google-search-results==2.4.1
@@ -27,6 +30,7 @@ pathspec==0.11.0
 Pillow==9.4.0
 platformdirs==2.6.2
 protobuf==3.19.5
+pycparser==2.21
 PySocks==1.7.1
 python-dotenv==0.21.1
 python-telegram-bot==20.0
@@ -36,6 +40,7 @@ selenium==4.8.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.4
 stability-sdk==0.3.1
 tomli==2.0.1
 tqdm==4.64.1
